# gitscaffold

./: .coverage  .env.example  .gitignore  Dockerfile  GEMINI.md  GITCAFFOLD_ROADMAP.md  README.md  RELEASE.md  ROADMAP.md  ROADMAP.yml  action.yml  entrypoint.sh  gitscaffold.py  publish_pypi.sh  pyproject.toml  release.sh  scaffold.py  shared_context.md  shared_context_vibe-kanban.md  test_issues.txt  test_roadmap.yml  usage.md  work_100425.md  work_2025-10-05.md
.github/workflows/: action.yml  ci.yml  gemini-assistant.yml  manual-release.yml  publish-pypi.yml  pypi-publish.yml  release.yml  test-and-update-coverage.yml
demo/: example_roadmap.md
docs/: ROADMAP.md  capabilities-and-limits.md  gh_first.md  integration_test.md  issues.md  quickstart.md  reference.md  release.md  run_action_locally.md  rust_usage.md  strengths.md  troubleshooting.md  usage.md  weaknesses.md
docs/integrations/: agent_dispatch.md  aider_one-shot.md  vibe-kanban.md
pytest-of-user/: pytest-current
pytest-of-user/pytest-0/: test_parse_invalid_not_mappingcurrent  test_parse_validcurrent
rust/mdparser/: Cargo.toml
rust/mdparser/src/: main.rs
scaffold/: __init__.py  ai.py  ai_group.py  api.py  ci.py  cli.py  demo.py  github.py  github_cli.py  issues.py  kanban.py  kanban_client.py  matcher.py  parser.py  roadmap.py  scripts_installer.py  settings.py  source.py  validator.py  vibe_kanban.py
scripts/: audit.sh  codex-loop  deduplicate_issues.py  dogfood.sh  e2e_test.sh  enrich.py  example_cli_wrapper.py  gemini_one_shot.py  github_batch_enrich_llm.py  github_cli.py  github_delete_closed_issues_ui.py  github_enrich_issue_llm.py  github_enrich_issues.py  import_md.py  repl.py  run-aider-integration.sh  run_aider_on_gitscaffold.sh  test_workflow.sh
tests/: calculator.py  issues.txt  test_ai_module.py  test_cli_aider_integration.py  test_cli_assistant.py  test_cli_cleanup.py  test_cli_config.py  test_cli_deduplicate.py  test_cli_diff.py  test_cli_enrich.py  test_cli_gemini_process_issues.py  test_cli_import_md.py  test_cli_kanban.py  test_cli_next.py  test_cli_pr_feedback.py  test_cli_run_action_locally.py  test_cli_sync.py  test_core_env.py  test_core_repo.py  test_env_handling.py  test_github_cli.py  test_parser.py  test_scripts_installer.py  test_scripts_vendored.py
(+26 files in other folders)
