[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitscaffold"
version = "0.1.1"
description = "Convert roadmaps to GitHub issues"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "PyGithub>=1.55",
    "pyyaml>=6.0",
    "click>=8.0",
    "jinja2>=3.0",
    "pydantic>=1.9"
]

[project.scripts]
gitscaffold = "scaffold.cli:cli"