 [package]
 name = "mdparser"
 version = "0.1.0"
 edition = "2021"
 authors = ["Joseph Edward <josephedward@gmail.com>"]
 description = "Proof-of-concept Markdown AST to JSON parser"
 license = "MIT"
 repository = "https://github.com/josephedward/gitscaffold"

 [dependencies]
 pulldown-cmark = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "4.0", features = ["derive"] }[package]
name = "mdparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[package]
name = "mdparser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
